# FuzzyExtractor

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  package.json
benches/: bench.rs  constants.rs
src/: lib.rs  utils.rs
tests/: constants.rs  utils.rs  wasm.rs
