[package]
name = "fuzzy-extractor"
version = "0.1.0"
authors = ["ianyang <ian7yang@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
pbkdf2 = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2.4", features = ["js"] }
hex = "0.4.3"
rand_chacha = "0.3.1"
rand_xoshiro = "0.6.0"
rand_hc = "0.3.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.

console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
timeit = "0.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window"
]

[features]
default = ["console_error_panic_hook"]
